# xgpt

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
tools/: convert_deepspeed_to_hf.py  download_hf_model.py  merge_adapter.py
tools/conf/: convert_deepspeed_to_hf.yaml  download_hf_model.yaml  merge_adapter.yaml
xgpt/conf/: commons.yaml  local_conf_example.yaml  rlhf_ppo.yaml  rlhf_rm.yaml  rlhf_sft.yaml  rlhf_sft_llama.yaml
xgpt/conf/optimizer/: adamw.yaml  deepspeed_fused_adam.yaml
xgpt/conf/scheduler/: constant_schedule_with_warmup.yaml
xgpt/core/: data.py  model.py  ppo_config.py  ppo_model.py
xgpt/tasks/language_modeling/: __init__.py  data.py  model.py
xgpt/tasks/language_modeling/datasets/: anthropic_rlhf.py  webgpt_comparisons.py
xgpt/tasks/reinforcement_learning/: __init__.py  data.py  model.py
xgpt/tasks/reinforcement_learning/datasets/: anthropic_rlhf.py  webgpt_comparisons.py
xgpt/tasks/reward_modeling/: __init__.py  data.py  model.py
xgpt/tasks/reward_modeling/datasets/: anthropic_rlhf.py  webgpt_comparisons.py
xgpt/utils/: dataset.py  deepspeed.py  ppo.py  prompt_templates.py
