[metadata]
author = Shaojie Jiang
author_email = 
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    # License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = 
keywords =
    chatbot
    GPT
long_description = file: README.md
long_description_content_type = text/markdown
name = xgpt
project_urls =
    Bug Tracker = 
url = 
version = 0.0.1
# license = Apache License 2.0

[options]
python_requires = >=3.9,<3.11
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    torch==1.13.0
    transformers==4.30.2
    tqdm>=4.62.3,<=4.64.1
    wandb==0.13.1
    hydra-core==1.2.0
    setuptools==59.5.0
    datasets>=2.6.1,<=2.9.0
    gradio==3.20.1
    deepspeed==0.8.0
    pytorch-lightning==1.9.5
    lightning-utilities==0.6.0.post0
    duckduckgo-search==3.8.3
    black==23.1.0
    bitsandbytes==0.39.1
    loralib==0.1.1
    nltk==3.8.1
    tokenizers==0.13.3
    openai==0.27.8
    peft @ git+https://github.com/huggingface/peft.git  # necessary for 4bit training

[options.extras_require]
publishing =
    build
    twine
    wheel